[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/exp_part1.png" type="Texture" id=1]
[ext_resource path="res://assets/short_exp.mp3" type="AudioStream" id=2]
[ext_resource path="res://assets/mothership.png" type="Texture" id=3]
[ext_resource path="res://scripts/mothership.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 64.0

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 1, 1, 1, 1, 0, 0, 0, 1 )

[node name="Mothership" type="Area2D"]
collision_mask = 512
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
rotation = -1.5708
scale = Vector2( 0.5, 0.6 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="DeathTimer" type="Timer" parent="."]
one_shot = true

[node name="ExplosionParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 64
explosiveness = 1.0
texture = ExtResource( 1 )
emission_shape = 1
emission_sphere_radius = 1.0
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 50.0
angular_velocity = 10.0
angular_velocity_random = 1.0
orbit_velocity = 5.0
orbit_velocity_random = 1.0
linear_accel = 5.0
color_ramp = SubResource( 2 )

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
volume_db = -20.0

[connection signal="area_shape_entered" from="." to="." method="_on_Baddie_area_shape_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
